<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/times_notified_today"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notified_today_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:gravity="center"
        android:padding="50dp"
        android:text="@string/default_number_04"
        android:textColor="@android:color/black"
        android:textSize="100sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/weekly_avg"
        android:textColor="@android:color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/weekly_avg_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/circle_with_shadow"
        android:elevation="2dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/default_number_03"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:translationZ="2dp" />

    <Button
        android:id="@+id/daily_data_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:padding="8dp"
        android:onClick="showDailyData"
        android:text="@string/daily_data"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>